@@ -8,7 +8,7 @@ Ported to KDE 2 by:
   Wynn Wilkes <wynnw@calderasystems.com>
 
 Contributions from:
-  Matthias Ettrich >ettrich@kde.org>
+  Matthias Ettrich <ettrich@kde.org>
   Didier Belot <dib@avo.fr>
   Harri Porten <porten@kde.org>
   David Faure <faure@kde.org>
@@ -16,3 +16,4 @@ Contributions from:
   Petter Reinholdtsen <pere@td.org.uit.no>
   Carsten Pfeiffer <pfeiffer@kde.org>
   Espen Sand <espen@kde.org>
+  Matthias Kiefer <kiefer@kde.org>
